WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150953
_WKObservablePageState's _webProcessIsResponsive property isn't set to YES when an unresponsive page is reloaded
https://bugs.webkit.org/show_bug.cgi?id=150953
Summary
_WKObservablePageState's _webProcessIsResponsive property isn't set to YES wh...
Geoffrey Garen
Reported
2015-11-05 14:51:36 PST
_WKObservablePageState's _webProcessIsResponsive property isn't set to YES when an unresponsive page is reloaded
Attachments
Patch
(2.66 KB, patch)
2015-11-05 14:53 PST
,
Geoffrey Garen
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-11-05 14:53:46 PST
Created
attachment 264888
[details]
Patch
Geoffrey Garen
Comment 2
2015-11-05 15:18:18 PST
Committed
r192083
: <
http://trac.webkit.org/changeset/192083
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug